Changed swagger-codegen to use locally built branch
