# server/swagger.json
@@ -12,60 +12,33 @@
   ],
   "paths": {
     "/pet": {
-      "tags": [
-          "pet"
-      ],
       "get": {
-        "summary": "Retrieve pets by optional type",
-        "description": "Retrieves all pets regardless of type or status.",
+        "tags": [
+            "pet"
+        ],
+        "summary": "Retrieve pets",
+        "description": "Retrieves all pets.",
         "operationId": "getPets",
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "type",
+            "name": "limit",
             "in": "query",
-            "description": "Type of animal to retrieve",
+            "description": "The number of pets to return. 10 by default.",
             "required": false,
-            "type": "string"
+            "type": "integer",
+            "format": "int32"
           }
         ],
         "responses": {
           "200": {
-            "description": "successful operation",
+            "description": "Successful operation",
             "schema": {
               "type": "array",
               "items": {
                 "$ref": "#/definitions/Pet"
               }
             }
-          }
-        },
-        "security": []
-      },
-      "post": {
-        "summary": "Add a new pet",
-        "description": "",
-        "operationId": "addPet",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Pet object that needs to be added to the store",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Pet"
-            }
-          }
-        ],
-        "responses": {
-          "405": {
-            "description": "Invalid input"
           }
         },
         "security": []
@@ -84,7 +57,7 @@
           {
             "name": "petId",
             "in": "path",
-            "description": "ID of pet to return",
+            "description": "ID of the pet to return",
             "required": true,
             "type": "integer",
             "format": "int64"
@@ -94,7 +67,7 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/Pet"
+              "$ref": "#/definitions/DetailedPet"
             }
           }
         },
@@ -109,31 +82,50 @@
       "required": [
         "id",
         "name",
-        "color",
-        "type"
+        "weight"
       ],
       "properties": {
         "id": {
           "type": "integer",
           "format": "int64"
         },
-        "firstName": {
+        "name": {
           "type": "string",
-          "example": "Sullivan"
+          "description": "The full name of the pet"
         },
-        "lastName": {
+        "createdAt": {
           "type": "string",
-          "example": "Sullivan"
-        },
-        "color": {
-          "type": "string",
-          "example": "Yellow"
-        },
-        "type": {
-          "type": "string",
-          "example": "Dog"
+          "format": "date",
+          "description": "The date of creation of the pet"
         }
       }
+    },
+    "DetailedPet": {
+      "allOf": [{
+          "$ref": "#/definitions/Pet"
+        }, {
+          "type": "object",
+          "required": [
+            "description"
+          ],
+          "properties": {
+            "description": {
+              "type": "string",
+              "description": "The descriptive story of the pet"
+            },
+            "weight": {
+              "type": "number",
+              "format": "decimal",
+              "description": "The weight of the pet"
+            },
+            "age": {
+              "type": "number",
+              "format": "int32",
+              "description": "The age in years of the pet"
+            }
+          }
+        }
+      ]
     }
   }
 }
